<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Live TVˣ</string>
    <string name="on_now">On now</string>
    <string name="zap_conflict">Zap conflict</string>
    <string name="select_channel_manually">Select channel manually</string>
    <string name="scan_back">Back</string>
    <string name="new_favorite_list">New Favorite List</string>
    <string name="parental_control_settings">Parental control settings</string>
    <string name="enter_pin_to_see_settings">Enter PIN to see settings.</string>
    <string name="unlock">Unlock</string>
    <string name="enter_pin_using_number">Enter PIN using number keys or navigational arrows.</string>
    <string name="press_ok_to_confirm">Press OK to confirm.</string>
    <string name="postal_code">Postal code</string>
    <string name="enter_postal_code">Enter your Postal code.</string>
    <string-array name="audio_channels">
        <item>""</item>
        <item>@string/nav_MONO</item>
        <item>@string/nav_STEREO</item>
        <item>@string/nav_SAP</item>
        <item>@string/nav_dual_a</item>
        <item>@string/nav_dual_b</item>
        <item>@string/nav_dual_ab</item>
        <item>@string/nav_NICAM_MONO</item>
        <item>@string/nav_nicam_stereo</item>
        <item>@string/nav_nicam_dual_a</item>
        <item>@string/nav_nicam_dual_b</item>
        <item>@string/nav_nicam_dual_ab</item>
        <item>4#CH</item>
        <item>5.1#CH</item>
        <item>7.1#CH</item>
        <item>@string/nav_Dual_Mono</item>
        <item>@string/nav_dual1</item>
        <item>@string/nav_DUAL2</item>
        <item>@string/nav_A2_DUAL1_DUAL2</item>
        <item>@string/nav_sap_m</item>
        <item>@string/nav_sap_s</item>
    </string-array>
    <string-array name="audio_channels_strings">
        <item>""</item>
        <item>@string/nav_MONO</item>
        <item>@string/nav_MONO</item>
        <item>@string/nav_Dual_Mono</item>
        <item>@string/nav_STEREO</item>
        <item>@string/nav_STEREO</item>
        <item>@string/nav_STEREO</item>
        <item>@string/nav_Surround_2CH</item>
        <item>@string/nav_Surround</item>
        <item>3#CH</item>
        <item>4#CH</item>
        <item>5.1#CH</item>
        <item>7.1#CH</item>
        <item>@string/nav_MONO</item>
        <item>@string/nav_STEREO</item>
        <item>@string/nav_Dual_Mono</item>
        <item>5.1#CH</item>
        <item>""</item>
        <item>""</item>
        <item>""</item>
        <item>@string/nav_MONO</item>
        <item>@string/nav_Dual_Mono</item>
        <item>@string/nav_STEREO</item>
        <item>@string/nav_Surround_2CH</item>
        <item>@string/nav_Surround</item>
        <item>3#CH</item>
        <item>4#CH</item>
        <item>""</item>
        <item>""</item>
        <item>@string/nav_dual</item>
        <item>@string/nicam</item>
        <item>@string/nav_SAP</item>
        <item>@string/nav_dual1</item>
        <item>@string/nav_DUAL2</item>
        <item>@string/nav_A2_DUAL1_DUAL2</item>
        <item>@string/nav_sap_m</item>
        <item>@string/nav_sap_s</item>
        <item>@string/nav_NICAM_MONO</item>
    </string-array>
    <string name="nav_MONO">Mono</string>
    <string name="nav_STEREO">Stereo</string>
    <string name="nav_SAP">SAP</string>
    <string name="nav_dual">Dual</string>
    <string name="nicam">Nicam</string>
    <string name="nav_dual1">Dual1</string>
    <string name="nav_DUAL2">Dual2</string>
    <string name="nav_NICAM_MONO">Nicam Mono</string>
    <string name="nav_A2_DUAL1_DUAL2">Dual I+II</string>
    <string name="nav_Dual_Mono">"Dual Mono"</string>
    <string name="nav_Surround_2CH">"Surround 2 Channels"</string>
    <string name="nav_Surround">"Surround"</string>
    <string name="nav_sap_s">"SAP Mono"</string>
    <string name="nav_sap_m">"SAP Stereo"</string>
    <string name="nav_dual_a">Dual A</string>
    <string name="nav_dual_b">Dual B</string>
    <string name="nav_dual_ab">Dual AB</string>
    <string name="nav_nicam_stereo">NICAM Stereo</string>
    <string name="nav_nicam_dual_a">Nicam Dual A</string>
    <string name="nav_nicam_dual_b">Nicam Dual B</string>
    <string name="nav_nicam_dual_ab">Nicam Dual AB</string>
    <string-array name="duration_hrs_no_zero">
        <item>1 hr</item>
        <item>2 hr</item>
        <item>3 hr</item>
        <item>4 hr</item>
        <item>5 hr</item>
        <item>6 hr</item>
        <item>7 hr</item>
        <item>8 hr</item>
        <item>9 hr</item>
    </string-array>
    <string-array name="duration_hrs">
        <item>0 hr</item>
        <item>1 hr</item>
        <item>2 hr</item>
        <item>3 hr</item>
        <item>4 hr</item>
        <item>5 hr</item>
        <item>6 hr</item>
        <item>7 hr</item>
        <item>8 hr</item>
        <item>9 hr</item>
    </string-array>
    <string-array name="duration_min_no_zero">
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>20 min</item>
        <item>25 min</item>
        <item>30 min</item>
        <item>35 min</item>
        <item>40 min</item>
        <item>45 min</item>
        <item>50 min</item>
        <item>55 min</item>
    </string-array>
    <string-array name="duration_min">
        <item>0 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>20 min</item>
        <item>25 min</item>
        <item>30 min</item>
        <item>35 min</item>
        <item>40 min</item>
        <item>45 min</item>
        <item>50 min</item>
        <item>55 min</item>
    </string-array>
    <string name="channels_scan_select_description">Connect your tuner and select the appropriate option to scan for channels. This step can be skipped and done afterward from settings or Live TV application</string>
    <string name="evaluation_license_title">EVALUATION LICENSE DISCLAIMER</string>
    <string-array name="evaluation_license_dsc_title">
        <item>1\t\t\tLICENSE\n\n</item>
        <item>2\t\t\tUPDATES AND FEEDBACK\n\n</item>
        <item>3\t\t\tCONFIDENTIALITY\n\n</item>
        <item>4\t\t\tWARRANTY AND LIMITATION OF LIABILITY\n\n</item>
        <item>5\t\t\tOTHER\n\n</item>
    </string-array>
    <string-array name="evaluation_license_dsc">
        
        <item>
            This application (“Live TV app”) is provided by iWedia S.A. under a one-time, non-exclusive, nontransferable, royalty-free, non-sublicenseable and revocable license (“Evaluation License”) to be used solely for internal evaluation and demonstration purposes for a period of 6 months from Live TV application release date.\n\nEvaluation License is granted solely for the purposes of: \n\nI.\t\t\tInternal evaluation – this license is for internal use only and is not a production license, and accordingly may not be distributed in whole or in any of its parts or incorporated in any commercial product\n\nII.\t\t\tDemonstration – besides internal evaluation, this license may be used only for marketing purpose of demonstration towards third persons, as is. It is explicitly prohibited to use this license in any way with competitors of iWedia.\n\nIt is prohibited to:\n\nI.\t\t\tSublicense, to use or modify the Live TV app or create any derivative works from Live TV app, including any associated documentation.\n\nII.\t\t\tReverse compile, reverse engineer, disassemble, reformat, benchmark, or otherwise attempt to read or make readable the Object Code or Source Code (or the underlying ideas, algorithms, structure or organization) of the Live TV app, in whole or in part;\n\nIII.\t\t\tModify the Live TV app or create any derivative work based on the Software;\n\nIV.\t\t\tRent, lease, sell, sublicense, grant a security interest in, or otherwise transfer any rights in the Live TV app;\n\nV.\t\t\tRemove or alter any marks or proprietary notices or labels contained in the Live TV app;\n\nVI.\t\t\tUse the Live TV app in any manner that violates any intellectual property or privacy rights of any third party; or\n\nVII.\t\t\tUse the Live TV app in any manner that violates any applicable international, federal, state or local law or regulation.\n\nAll right, title, and interest in and to all intellectual property and proprietary rights relating to the Live TV app shall remain vested in iWedia.\n\n
        </item>
        
        <item>
            iWedia shall have the right (without any obligation), at its sole discretion, to deliver updated versions of the Live TV app. The terms and conditions of this Evaluation License shall apply to any new version of the Live TV app.\n\nThere is no obligation to give iWedia any suggestions, comments or other feedback regarding the Live TV app (&quot;Feedback&quot;). However, any Feedback that is voluntarily provided may be used in iWedia products and related specifications or other documentation. Accordingly, if iWedia receives any Feedback on any version of the Live TV app, iWedia may freely use, disclose, reproduce, license, distribute and otherwise commercialize the Feedback in any iWedia product, technology, service, specification or other documentation.\n\n
        </item>
        
        <item>
            Live TV app is the confidential information of iWedia (&quot;Confidential Information&quot;) provided under NDA.\n\n
        </item>
        
        <item>
            iWedia provides the software &quot;AS IS&quot; and without any warranty of any kind, express or implied; iWedia disclaims all warranties and conditions of any kind.\n\niWedia shall have no liability or obligation with respect to any subject matter of this Evaluation License for any direct, indirect, incidental, special, punitive or consequential damages under any theory of liability whether in tort, contract, negligence, strict liability or otherwise even if advised of the possibility of such damages.\n\niWedia will not be liable for any loss of use, interruption of business, including without limitation lost profits, regardless of the form of action, even if iWedia has been advised of the possibility of such damages.\n\n
        </item>
        
        <item>
            This Evaluation License shall constitute the binding agreement of the parties. This Evaluation License may not be changed, terminated or amended.\n
        </item>
    </string-array>
    <string name="no_channel_associated">No channel is associated with that number</string>
    <string name="Jan">Jan</string>
    <string name="Feb">Feb</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Apr</string>
    <string name="May">May</string>
    <string name="Jun">Jun</string>
    <string name="Jul">Jul</string>
    <string name="Aug">Aug</string>
    <string name="Sep">Sep</string>
    <string name="Oct">Oct</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>
    <string name="cc_preview">ABC</string>
    <string name="atsc30_display_eas">Display</string>
    <string name="atsc30_hide_eas">Hide</string>
    <string name="description_age_4">description_age_4</string>
    <string name="description_age_5">description_age_5</string>
    <string name="description_age_6">description_age_6</string>
    <string name="description_age_7">description_age_7</string>
    <string name="description_age_8">description_age_8</string>
    <string name="description_age_9">description_age_9</string>
    <string name="description_age_10">description_age_10</string>
    <string name="description_age_11">description_age_11</string>
    <string name="description_age_12">description_age_12</string>
    <string name="description_age_13">description_age_13</string>
    <string name="description_age_14">description_age_14</string>
    <string name="timeshift_buffer_reached_warning">The timeshift buffer size is reached.\nDo you want to watch or return to live?</string>
    <string name="return_to_live">Return</string>
    <string name="watch">Watch</string>
</resources>