<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ts_buffer_reached_warning_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.8"
    android:background="@color/bg_load">

    <TextView
        android:id="@+id/ts_buffer_reached_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/custom_dim_20"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/font_22"
        app:layout_constraintBottom_toTopOf="@id/returnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/timeshift_buffer_reached_warning" />

    <com.iwedia.cltv.ReferenceDrawableButton
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/custom_dim_20"
        android:layout_marginEnd="@dimen/custom_dim_36"
        android:focusable="true"
        android:text="@string/return_to_live"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/watchButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/ts_buffer_reached_text"
        app:layout_constraintTop_toBottomOf="@id/ts_buffer_reached_text" />

    <com.iwedia.cltv.ReferenceDrawableButton
        android:id="@+id/watchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/custom_dim_36"
        android:focusable="true"
        android:text="@string/watch"
        app:layout_constraintBottom_toBottomOf="@id/returnButton"
        app:layout_constraintEnd_toEndOf="@id/ts_buffer_reached_text"
        app:layout_constraintStart_toEndOf="@id/returnButton"
        app:layout_constraintTop_toTopOf="@id/returnButton" />

</androidx.constraintlayout.widget.ConstraintLayout>