<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/custom_dim_9_5"
        android:gravity="center"
        android:textSize="@dimen/font_21"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/postal_code" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/custom_dim_16"
        android:gravity="center"
        android:textSize="@dimen/font_13"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/postal_code_digit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/enter_postal_code" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postal_code_digit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/custom_dim_77"
        android:layout_marginBottom="@dimen/custom_dim_158"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pressOkTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="@string/press_ok_to_confirm"
        android:textSize="@dimen/font_13"
        android:visibility="invisible"
        android:layout_marginBottom="@dimen/custom_dim_131"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>